fix(altinn-overview): avoid clipping list view
PB-877

--- a/src/app/components/salary/altinnOverview/altinn-overview/altinn-overview.component.sass
+++ b/src/app/components/salary/altinnOverview/altinn-overview/altinn-overview.component.sass
@@ -6,5 +6,7 @@
         line-height: 0
 .splitview_list
     width: 30%
+    ag-grid-wrapper
+        max-height: unset !important
 .splitview_detail
     width: 70%
